--- a/land.html
+++ b/land.html
@@ -17,7 +17,7 @@
     </nav>
 
     <center>
-        <iframe id="maincheez" width="420" height="345" src="https://www.youtube.com/embed/pQ4ykYx0ths?t=31s"
+        <iframe id="maincheez" width="420" height="345" src="https://www.youtube.com/embed/live/l6J0ylYTO4s?si=bcSjeI8X9ARsolzo"
             allowfullscreen></iframe>
     </center>
 
